Consolidate google forms

--- a/content/person/3UNp9MEanX65anIEd4r7rH.yaml
+++ b/content/person/3UNp9MEanX65anIEd4r7rH.yaml
@@ -1,4 +1,7 @@
-about: Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam harum ipsum illum ratione amet! Maxime ipsum modi amet error.
+about: 'Angus is the fellow who founded Nerdwise because there was just too much slow garbage on the internet. Deciding that life was too easy living where the air doesn''t hurt your face he left the west coast to settle in Regina, Canada with his wife and lil'' doggo.
+
+
+  He rocks a degree in Computer Science from Simon Fraser University on top of a half dozen years of full-time experience. Whether it''s maintaining code originally written in the 80s or creating front-ends for world-class corporations he sees any project as an opportunity to flex.'
 css_class: profile profile--1
 image:
   description: Angus Macdonald
