--- a/content/person/70Aua1MoBohsAYiMkfUWo8.yaml
+++ b/content/person/70Aua1MoBohsAYiMkfUWo8.yaml
@@ -1,4 +1,7 @@
-about: Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam harum ipsum illum ratione amet! Maxime ipsum modi amet error.
+about: 'Jonathan Loubert is a former baby and future skeleton. He lives in Vancouver, Canada with his partner, two confused cats, and a tower of Dungeons & Dragons memorabilia.
+
+
+  He has a Bachelor’s in Computer Science from the University of Victoria, in British Columbia, and spent over three years doing internal software for DHX Media before joining Nerdwise to make some totally rad websites. He liked Javascript and Python before they were cool.'
 css_class: profile profile--2
 image:
   description: Jonathan Loubert
