--- a/content/person/1Q0hdZPsPznSL7uzwYh2k3.yaml
+++ b/content/person/1Q0hdZPsPznSL7uzwYh2k3.yaml
@@ -1,4 +1,4 @@
-about: Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam harum ipsum illum ratione amet! Maxime ipsum modi amet error.
+about: Probably the coolest of the group, Kaden is a self taught developer residing in North Vancouver. On top of being a self taught developer, his badassery extends to being a dangerous martial artist with a white belt in Brazilian Jiu Jitsu. If you feel intimidated by how awesome he sounds, don't worry, he's still human like the rest of us.
 css_class: profile profile--3
 image:
   description: Kaden Zipfel
