Make changes to contact form

--- a/content/form/2258q05YiYO64pys3V9Kw0.yaml
+++ b/content/form/2258q05YiYO64pys3V9Kw0.yaml
@@ -15,6 +15,6 @@ fields:
     input: email
 - label: Message
   name: entry.457207032
-  placeholder: How do you like your coffee?
+  placeholder: What's your beverage of choice?
   required: 'true'
   type: textarea
