--- a/content/topic/5RG6x4vbzeUBqCnlxjRXXK.yaml
+++ b/content/topic/5RG6x4vbzeUBqCnlxjRXXK.yaml
@@ -1,2 +1,2 @@
-css_class: contact__topic contact__topic--3
-name: Let's shoot the shit
+css_class: contact__topic contact__topic--1 contact__topic--active
+name: Let's talk
