Remove capital letter in workflow contentful

--- a/content/workflow/2W7HGINb10azCeB0KrFUif.yaml
+++ b/content/workflow/2W7HGINb10azCeB0KrFUif.yaml
@@ -1,7 +1,7 @@
 block_css_classes:
 - block--pink
 - block--reverse
-component: Workflow
+component: workflow
 hero_image:
   description: The Nerdwise team at the Go-Kart track
   file:
