--- a/podspec.yaml
+++ b/podspec.yaml
@@ -25,7 +25,7 @@ preprocessors:
   kind: gulp
   build_task: grow-build
 - kind: contentful
-  autorun: false
+  autorun: true
   inject: true
   space: u4z8be9d4a38
   access_token: I-LKjMCg9XN7_asyj-oDfWDOVx5EbbtTWEtBgSRhbHc
@@ -47,6 +47,8 @@ preprocessors:
     content_type: section
   - collection: /content/workflow/
     content_type: workflow
+  - collection: /content/hero/
+    content_type: hero
 
 static_dirs:
 - static_dir: /static/
