--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -52,9 +52,10 @@ components:
 - component: contact
   block_css_classes:
     - block--cyan
-  strings:
-    - !g.yaml /content/strings/6U4iol8nzxWmEi6V1co99N.yaml?email
-    - !g.yaml /content/strings/6U4iol8nzxWmEi6V1co99N.yaml?success_message
+  email:
+    !g.yaml /content/strings/6U4iol8nzxWmEi6V1co99N.yaml?email
+  success_message:
+    !g.yaml /content/strings/6U4iol8nzxWmEi6V1co99N.yaml?success_message
   topics:
     - name:
         !g.yaml /content/topic/5RG6x4vbzeUBqCnlxjRXXK.yaml?name
