--- a/content/why_us/1aT1loXqFSwybrwJ09FB34.yaml
+++ b/content/why_us/1aT1loXqFSwybrwJ09FB34.yaml
@@ -140,4 +140,5 @@ modal_questions:
     '
   question: How is 3rd party code handled?
 modal_title: Sifting through developer bullshit
-tagline: Stupid good talent without the bullshit.
+tagline: >-
+  High end talent that gets the job done.
